QuantumParser.py
# Generated from Quantum.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class QuantumParser ( Parser ):

    grammarFileName = "Quantum.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'qubit'", "'measure'", "'grover'", "'h'", 
                     "'x'", "'y'", "'z'", "'cx'", "'ccx'", "'cz'", "'u3'", 
                     "'rz'", "'rx'", "'ry'", "'int'", "'float'", "'^'", 
                     "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", "'='", "'('", 
                     "')'", "'{'", "'}'", "':'", "','", "'->'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TINT", "TFLOAT", 
                      "POW", "ADD", "SUB", "MUL", "DIV", "INTDIV", "MOD", 
                      "ASSIGN", "LPAR", "RPAR", "LBRACE", "RBRACE", "COLON", 
                      "COMMA", "ARROW", "SEMI", "ID", "NUMBER", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_qubitDecl = 2
    RULE_applyGate = 3
    RULE_applyGateStmt = 4
    RULE_measureStmt = 5
    RULE_groverBlock = 6
    RULE_block = 7
    RULE_type = 8
    RULE_expr = 9
    RULE_functionCall = 10
    RULE_arg = 11
    RULE_argList = 12
    RULE_idList = 13
    RULE_gate = 14

    ruleNames =  [ "prog", "stmt", "qubitDecl", "applyGate", "applyGateStmt", 
                   "measureStmt", "groverBlock", "block", "type", "expr", 
                   "functionCall", "arg", "argList", "idList", "gate" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    TINT=15
    TFLOAT=16
    POW=17
    ADD=18
    SUB=19
    MUL=20
    DIV=21
    INTDIV=22
    MOD=23
    ASSIGN=24
    LPAR=25
    RPAR=26
    LBRACE=27
    RBRACE=28
    COLON=29
    COMMA=30
    ARROW=31
    SEMI=32
    ID=33
    NUMBER=34
    LINE_COMMENT=35
    BLOCK_COMMENT=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(QuantumParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumParser.StmtContext)
            else:
                return self.getTypedRuleContext(QuantumParser.StmtContext,i)


        def getRuleIndex(self):
            return QuantumParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = QuantumParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 25803915262) != 0):
                self.state = 30
                self.stmt()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(QuantumParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QuantumParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StmtGroverContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def groverBlock(self):
            return self.getTypedRuleContext(QuantumParser.GroverBlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtGrover" ):
                listener.enterStmtGrover(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtGrover" ):
                listener.exitStmtGrover(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtGrover" ):
                return visitor.visitStmtGrover(self)
            else:
                return visitor.visitChildren(self)


    class StmtMeasureContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def measureStmt(self):
            return self.getTypedRuleContext(QuantumParser.MeasureStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtMeasure" ):
                listener.enterStmtMeasure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtMeasure" ):
                listener.exitStmtMeasure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtMeasure" ):
                return visitor.visitStmtMeasure(self)
            else:
                return visitor.visitChildren(self)


    class StmtExprContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(QuantumParser.ExprContext,0)

        def SEMI(self):
            return self.getToken(QuantumParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtExpr" ):
                listener.enterStmtExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtExpr" ):
                listener.exitStmtExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtExpr" ):
                return visitor.visitStmtExpr(self)
            else:
                return visitor.visitChildren(self)


    class StmtApplyGateContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def applyGateStmt(self):
            return self.getTypedRuleContext(QuantumParser.ApplyGateStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtApplyGate" ):
                listener.enterStmtApplyGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtApplyGate" ):
                listener.exitStmtApplyGate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtApplyGate" ):
                return visitor.visitStmtApplyGate(self)
            else:
                return visitor.visitChildren(self)


    class StmtDeclareQubitContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def qubitDecl(self):
            return self.getTypedRuleContext(QuantumParser.QubitDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtDeclareQubit" ):
                listener.enterStmtDeclareQubit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtDeclareQubit" ):
                listener.exitStmtDeclareQubit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtDeclareQubit" ):
                return visitor.visitStmtDeclareQubit(self)
            else:
                return visitor.visitChildren(self)


    class StmtUpdateSymbolContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(QuantumParser.ID, 0)
        def COLON(self):
            return self.getToken(QuantumParser.COLON, 0)
        def type_(self):
            return self.getTypedRuleContext(QuantumParser.TypeContext,0)

        def ASSIGN(self):
            return self.getToken(QuantumParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(QuantumParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtUpdateSymbol" ):
                listener.enterStmtUpdateSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtUpdateSymbol" ):
                listener.exitStmtUpdateSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtUpdateSymbol" ):
                return visitor.visitStmtUpdateSymbol(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = QuantumParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = QuantumParser.StmtDeclareQubitContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.qubitDecl()
                pass

            elif la_ == 2:
                localctx = QuantumParser.StmtUpdateSymbolContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.match(QuantumParser.ID)
                self.state = 40
                self.match(QuantumParser.COLON)
                self.state = 41
                self.type_()
                self.state = 42
                self.match(QuantumParser.ASSIGN)
                self.state = 43
                self.expr(0)
                pass

            elif la_ == 3:
                localctx = QuantumParser.StmtApplyGateContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.applyGateStmt()
                pass

            elif la_ == 4:
                localctx = QuantumParser.StmtMeasureContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 46
                self.measureStmt()
                pass

            elif la_ == 5:
                localctx = QuantumParser.StmtGroverContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 47
                self.groverBlock()
                pass

            elif la_ == 6:
                localctx = QuantumParser.StmtExprContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 48
                self.expr(0)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==32:
                    self.state = 49
                    self.match(QuantumParser.SEMI)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QubitDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(QuantumParser.ID, 0)

        def SEMI(self):
            return self.getToken(QuantumParser.SEMI, 0)

        def getRuleIndex(self):
            return QuantumParser.RULE_qubitDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQubitDecl" ):
                listener.enterQubitDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQubitDecl" ):
                listener.exitQubitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQubitDecl" ):
                return visitor.visitQubitDecl(self)
            else:
                return visitor.visitChildren(self)




    def qubitDecl(self):

        localctx = QuantumParser.QubitDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_qubitDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(QuantumParser.T__0)
            self.state = 55
            self.match(QuantumParser.ID)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 56
                self.match(QuantumParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApplyGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gate(self):
            return self.getTypedRuleContext(QuantumParser.GateContext,0)


        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(QuantumParser.LPAR)
            else:
                return self.getToken(QuantumParser.LPAR, i)

        def RPAR(self, i:int=None):
            if i is None:
                return self.getTokens(QuantumParser.RPAR)
            else:
                return self.getToken(QuantumParser.RPAR, i)

        def argList(self):
            return self.getTypedRuleContext(QuantumParser.ArgListContext,0)


        def idList(self):
            return self.getTypedRuleContext(QuantumParser.IdListContext,0)


        def getRuleIndex(self):
            return QuantumParser.RULE_applyGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApplyGate" ):
                listener.enterApplyGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApplyGate" ):
                listener.exitApplyGate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApplyGate" ):
                return visitor.visitApplyGate(self)
            else:
                return visitor.visitChildren(self)




    def applyGate(self):

        localctx = QuantumParser.ApplyGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_applyGate)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.gate()
            self.state = 60
            self.match(QuantumParser.LPAR)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 25803882496) != 0):
                self.state = 61
                self.argList()


            self.state = 64
            self.match(QuantumParser.RPAR)
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 65
                self.match(QuantumParser.LPAR)
                self.state = 66
                self.idList()
                self.state = 67
                self.match(QuantumParser.RPAR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApplyGateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def applyGate(self):
            return self.getTypedRuleContext(QuantumParser.ApplyGateContext,0)


        def SEMI(self):
            return self.getToken(QuantumParser.SEMI, 0)

        def getRuleIndex(self):
            return QuantumParser.RULE_applyGateStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApplyGateStmt" ):
                listener.enterApplyGateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApplyGateStmt" ):
                listener.exitApplyGateStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApplyGateStmt" ):
                return visitor.visitApplyGateStmt(self)
            else:
                return visitor.visitChildren(self)




    def applyGateStmt(self):

        localctx = QuantumParser.ApplyGateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_applyGateStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.applyGate()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 72
                self.match(QuantumParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MeasureStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(QuantumParser.ID)
            else:
                return self.getToken(QuantumParser.ID, i)

        def ARROW(self):
            return self.getToken(QuantumParser.ARROW, 0)

        def SEMI(self):
            return self.getToken(QuantumParser.SEMI, 0)

        def getRuleIndex(self):
            return QuantumParser.RULE_measureStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeasureStmt" ):
                listener.enterMeasureStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeasureStmt" ):
                listener.exitMeasureStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeasureStmt" ):
                return visitor.visitMeasureStmt(self)
            else:
                return visitor.visitChildren(self)




    def measureStmt(self):

        localctx = QuantumParser.MeasureStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_measureStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(QuantumParser.T__1)
            self.state = 76
            self.match(QuantumParser.ID)
            self.state = 77
            self.match(QuantumParser.ARROW)
            self.state = 78
            self.match(QuantumParser.ID)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 79
                self.match(QuantumParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroverBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(QuantumParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(QuantumParser.BlockContext,0)


        def getRuleIndex(self):
            return QuantumParser.RULE_groverBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroverBlock" ):
                listener.enterGroverBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroverBlock" ):
                listener.exitGroverBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroverBlock" ):
                return visitor.visitGroverBlock(self)
            else:
                return visitor.visitChildren(self)




    def groverBlock(self):

        localctx = QuantumParser.GroverBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_groverBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(QuantumParser.T__2)
            self.state = 83
            self.match(QuantumParser.ID)
            self.state = 84
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(QuantumParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(QuantumParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumParser.StmtContext)
            else:
                return self.getTypedRuleContext(QuantumParser.StmtContext,i)


        def getRuleIndex(self):
            return QuantumParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = QuantumParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(QuantumParser.LBRACE)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 25803915262) != 0):
                self.state = 87
                self.stmt()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(QuantumParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TINT(self):
            return self.getToken(QuantumParser.TINT, 0)

        def TFLOAT(self):
            return self.getToken(QuantumParser.TFLOAT, 0)

        def getRuleIndex(self):
            return QuantumParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = QuantumParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not(_la==15 or _la==16):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QuantumParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class IntDivExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumParser.ExprContext)
            else:
                return self.getTypedRuleContext(QuantumParser.ExprContext,i)

        def INTDIV(self):
            return self.getToken(QuantumParser.INTDIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntDivExpr" ):
                listener.enterIntDivExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntDivExpr" ):
                listener.exitIntDivExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntDivExpr" ):
                return visitor.visitIntDivExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryMinusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SUB(self):
            return self.getToken(QuantumParser.SUB, 0)
        def expr(self):
            return self.getTypedRuleContext(QuantumParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryMinusExpr" ):
                listener.enterUnaryMinusExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryMinusExpr" ):
                listener.exitUnaryMinusExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryMinusExpr" ):
                return visitor.visitUnaryMinusExpr(self)
            else:
                return visitor.visitChildren(self)


    class ModExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumParser.ExprContext)
            else:
                return self.getTypedRuleContext(QuantumParser.ExprContext,i)

        def MOD(self):
            return self.getToken(QuantumParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModExpr" ):
                listener.enterModExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModExpr" ):
                listener.exitModExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModExpr" ):
                return visitor.visitModExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumParser.ExprContext)
            else:
                return self.getTypedRuleContext(QuantumParser.ExprContext,i)

        def ADD(self):
            return self.getToken(QuantumParser.ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddExpr" ):
                listener.enterAddExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddExpr" ):
                listener.exitAddExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddExpr" ):
                return visitor.visitAddExpr(self)
            else:
                return visitor.visitChildren(self)


    class NumberExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(QuantumParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberExpr" ):
                listener.enterNumberExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberExpr" ):
                listener.exitNumberExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberExpr" ):
                return visitor.visitNumberExpr(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionCall(self):
            return self.getTypedRuleContext(QuantumParser.FunctionCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallExpr" ):
                listener.enterFunctionCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallExpr" ):
                listener.exitFunctionCallExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallExpr" ):
                return visitor.visitFunctionCallExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QuantumParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuantumParser.ExprContext)
            else:
                return self.getTypedRuleContext(QuantumParser.ExprContext,i)

        def MUL(self):
            return self.getToken(QuantumParser.MUL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulExpr" ):
                listener.enterMulExpr(self)
